hardcoded widths to avoid flicker

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -25,9 +25,9 @@
   --size-content: 54rem;
   --size-gutter: var(--space-5);
   --size-gap: var(--space-6);
-  --sidebar-width: 10rem; /* Default value if not calculated */
-  --header-height: 4.25rem; /* Default value if not calculated */
-  --max-navheader-width: 70rem;
+  --sidebar-width: 10rem; /* max width of the sidebar + 3 * rootFontSize */
+  --header-height: 5.75rem; 
+  --max-navheader-width: 76.875rem; /*  navHeaderRef.current.offsetWidth + siteTitle.offsetWidth + 4 * rootFontSize   */
 }
 
 html {
